--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,13 +1,11 @@
 <header class="header">
   <div class="header-content">
     <a routerLink="/" class="logo">
-      <span class="logo-circle">
-        <span class="logo-highlight">M</span>
-      </span>
-      <span class="logo-text">odestBazar</span>
+      <img src="/logo.png" alt="ModestBazar Logo" class="logo-image" />
+      <span class="logo-text">ModestBazar</span>
     </a>
 
-    @if (!isProductDetailsPage()) {
+    @if (!shouldHideSearchBar()) {
       <div class="search-bar">
         <input
           type="text"
